# turbo

./: .gitignore  CMakeLists.txt  README
doc/: CMakeLists.txt  Doxyfile
src/: Axis.h  CMakeLists.txt  GenericInterface.h  Main.cpp  Main.h  Utility.h  turbo.h
src/compute/: CMakeLists.txt  CarterDeviation.cpp  CarterDeviation.h  ComputeDesign.cpp  ComputeDesign.h  ComputeGeneral.cpp  ComputeGeneral.h  Deviation.cpp  DeviationMethodBase.h  InitialDesign.cpp  InitialDesign.h  Math.cpp  NewtonRaphson.h
src/design/: .Blade.cpp  .BladeRow.cpp  .BladeRow.h  .Machine.cpp  .Machine.h  Airfoil.cpp  Airfoil.h  Blade.cpp  Blade.cpp.disabled  Blade.h  Blade.h.disabled  BladeRow.cpp  BladeRow.h  CMakeLists.txt  ComponentBase.cpp  ComponentBase.h  Machine.cpp  Machine.cpp.disabled  Machine.h  Machine.h.disabled  TurboBase.cpp  TurboBase.h
src/design/compute/: CMakeLists.txt  DeHaller.cpp  DeHaller.h
src/design/profile/: CMakeLists.txt  Profile.cpp  Profile.h  ProfileGenerator.cpp  ProfileGenerator.h
src/design/skew/: BezierTangential.cpp  BezierTangential.h  CMakeLists.txt  NoSkew.cpp  NoSkew.h  SkewDistribution.cpp  SkewDistribution.h  SkewDistributionBase.h
src/general/: CMakeLists.txt  CsvWriter.cpp  CsvWriter.h  Debug.h  Dummy.h  Error.h  General.h  InputObjectBase.h  List.h  StringConverter.cpp  StringConverter.h  Timer.cpp  Timer.h  TurboBase.cpp  TurboBase.h  Underlying.h  Utility.h  Vector.cpp  Vector.h  turbo.cpp
src/geometry/: Airfoil.cpp  Airfoil.h  Bezier.cpp  Bezier.h  Blade.cpp  Blade.h  BladeRow.cpp  BladeRow.h  CMakeLists.txt  CascadeComponentBase.cpp  CascadeComponentBase.h  ComponentBase.cpp  ComponentBase.h  Curve.cpp  Curve.h  DeHallerCriterion.cpp  DeHallerCriterion.h  Deviation.h  Entity.h  FilledSurface.cpp  FilledSurface.h  Geometry.h  Line.cpp  Line.h  Machine.cpp  Machine.h  McKenzieDeviation.cpp  McKenzieDeviation.h  Model.cpp  Model.h  PlanarSurface.cpp  PlanarSurface.h  Point.cpp  Point.h  Profile.cpp  Profile.h  Shape.cpp  Shape.h  Spline.cpp  Spline.h  (+11 more)
src/geometry/basic/: Axis.cpp  Axis.h  CMakeLists.txt  Line.cpp  Line.h  Point.cpp  Point.h  Shape.cpp  Shape.h  Vector.cpp  Vector.h
src/geometry/detail/: CMakeLists.txt  GeometryDetail.h  GeometryDetailGeneral.h  PlaceholderCurve.cpp  PlaceholderCurve.h  PlaceholderPoint.cpp  PlaceholderPoint.h  PlaceholderShape.cpp  PlaceholderShape.h  PlaceholderSurface.cpp  PlaceholderSurface.h  PlaceholderVolume.cpp  PlaceholderVolume.h
src/geometry/gmsh/: CMakeLists.txt  GeometryInterface.h  GmshBase.cpp  GmshBase.h  GmshBezier.cpp  GmshBezier.h  GmshBoundary.cpp  GmshBoundary.h  GmshBoundingBox.cpp  GmshBoundingBox.h  GmshControl.cpp  GmshControl.h  GmshCopy.cpp  GmshCopy.h  GmshExtrude.cpp  GmshExtrude.h  GmshGenerate.cpp  GmshGenerate.h  GmshLine.cpp  GmshLine.h  GmshPlanarSurface.cpp  GmshPlanarSurface.h  GmshPoint.cpp  GmshPoint.h  GmshRecombine.cpp  GmshRecombine.h  GmshRemove.cpp  GmshRemove.h  GmshSmooth.cpp  GmshSmooth.h  GmshSpline.cpp  GmshSpline.h  GmshTransfinite.cpp  GmshTransfinite.h  GmshWrite.cpp  GmshWrite.h
src/geometry/manipulation/: CMakeLists.txt  ManipulatorBase.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  Translate.cpp  Translate.h  TranslateAlongVector.cpp  TranslateAlongVector.h  TranslateBase.cpp  TranslateBase.h  TranslateToPoint.cpp  TranslateToPoint.h
src/geometry/operators/: CMakeLists.txt  Extrude.cpp  Extrude.h  GeometryOperators.h  Loft.cpp  Loft.h
src/geometry/primitive/: CMakeLists.txt  Curve.cpp  Line.cpp  Line.h  Point.cpp  Point.h  Shape.cpp  Shape.h  Spline.cpp  Spline.h  Surface.cpp  Surface.h  SurfaceFilling.cpp  SurfaceFilling.h  Wire.h
src/geometry/profile/: CMakeLists.txt  CamberGeneratorBase.cpp  CamberGeneratorBase.h  CircularArcCamber.cpp  CircularArcCamber.h  ConstantDistribution.cpp  Naca2DigitCamber.cpp  Naca2DigitCamber.h  Naca4DigitDistribution.cpp  Naca4DigitModifiedDistribution.cpp  Naca4DigitModifiedDistribution.h  NacaProfileGenerator.cpp  NacaProfileGenerator.h  (+5 more)
src/input/: CMakeLists.txt  CorrectedValue.h  CsvReader.h  DistributedValue.h  InputRegistry.cpp  InputRegistry.h  LimitedValue.h  PositiveValue.h  Registry.cpp  Registry.h  RegistryObject.h  RegistryObjectBase.h  Variables.h
src/interface/: CMakeLists.txt  GmshAddField.cpp  GmshAddField.h  GmshBase.cpp  GmshBase.h  GmshBezier.cpp  GmshBezier.h  GmshBoundary.cpp  GmshBoundary.h  GmshBoundingBox.cpp  GmshBoundingBox.h  GmshControl.cpp  GmshControl.h  GmshCopy.cpp  GmshCopy.h  GmshExtrude.cpp  GmshExtrude.h  GmshFilledSurface.cpp  GmshFilledSurface.h  GmshGenerate.cpp  GmshGenerate.h  GmshLine.cpp  GmshLine.h  GmshLoft.cpp  GmshLoft.h  GmshPhysicalGroup.cpp  GmshPhysicalGroup.h  GmshPlanarSurface.cpp  GmshPlanarSurface.h  GmshPoint.cpp  GmshPoint.h  GmshRecombine.cpp  GmshRecombine.h  GmshRemove.cpp  GmshRemove.h  GmshRemoveField.cpp  GmshRemoveField.h  GmshRemovePhysicalGroup.cpp  GmshRemovePhysicalGroup.h  GmshSetBGMesh.cpp  (+21 more)
src/math/: BezierCurve.h  BiCoeff.h  CMakeLists.txt  MathGeneral.cpp  MathGeneral.h  NewtonRaphson.h  Polyline.h  Vector.cpp  Vector.h
src/mesh/: CMakeLists.txt  Group.h  Mesh.cpp  Mesh.h  MeshBase.h  ProfileMesh.cpp  ProfileMesh.h
src/simulation/: CMakeLists.txt  Simulator.cpp  Simulator.h
test/src/: 000_test_CsvReader.cpp  000_test_List.cpp  000_test_StringConverter.cpp  010_test_BezierCurve.cpp  010_test_ConstantThickness.cpp  010_test_MaxProfileThickness.cpp  010_test_OutletVelocity.cpp  010_test_Polyline.cpp  010_test_SolidityDistribution.cpp  020_test_Point.cpp  020_test_Registry.cpp  040_test_Bezier.cpp  040_test_Line.cpp  040_test_Spline.cpp  050_test_Profile.cpp  060_test_PlanarSurface.cpp  080_test_Extrude.cpp  090_test_ProfileMesh.cpp  095_test_Simulator.cpp  100_test_Airfoil.cpp  200_test_Blade.cpp  210_test_Blade.cpp  220_test_Blade.cpp  221_test_Blade.cpp  230_test_Blade.cpp  231_test_Blade.cpp  CMakeLists.txt  Test.h  TestCurves.h  TestGmshInclude.h  TestInclude.h  TestSurfaces.h  test_Airfoil.cpp  test_Axis.cpp  test_Bezier.cpp  test_ConstantDistribution.cpp  test_Extrude.cpp  test_InputRegistry.cpp  test_Line.cpp  test_Mesh.cpp  (+20 more)
(+290 files in other folders)
